tests/097_double_unread.err
pirxc compilation failed: exit status 1
Output: error parsing program: tests/097_double_unread.pirx:5:13: expected ';' after statement, got <IDENT "iv">
Error: exit status 1
